fixed text alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,8 @@ h1 {
 .choice-text{
     padding: 2rem;
     width: 100%;
+    display: flex;
+    align-items: center;
 }
 
 .flex-column {
